Aligning footer section content for mobile, still need to fix desktop

--- a/styles/background.module.scss
+++ b/styles/background.module.scss
@@ -153,6 +153,7 @@
   
   @media (max-width: 768px) {
     justify-content: center; 
+    order: -3;
   }
 }
 
@@ -169,14 +170,15 @@
   
   @media (max-width: 768px) {
     justify-content: center; 
+    order: -1;
   }
 }
 
 .copyright-text {
   color: white;
-  font-size: 12;
+  font-size: 12px;
 
   @media (max-width: 768px) {
-    font-size: 10; 
+    font-size: 10px; 
   }
 }
