--- a/styles/buttons.module.scss
+++ b/styles/buttons.module.scss
@@ -34,6 +34,7 @@
   @media (max-width: 768px) {
     justify-content: center;
     margin-right: 0;
+    order: -2;
   }
 }
 
